# example-kernel-module

./: CMakeLists.txt  hello.c
cmake/: FindKernelHeaders.cmake
